Update to formatting

--- a/web/resume.html
+++ b/web/resume.html
@@ -1,22 +1,21 @@
 <!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
+Resume for Robert C. Bath
 -->
 <!DOCTYPE html>
 <html>
 <body>
-<div id="container" style="width:850">
+<div id="container" style="width:850px">
 
 <div id="nameHeader" style="text-align:center;">
 <h1> Robert C. Bath </h1> </div>
 <hr>  
 <div id="address" style="height:50px;width:200px;float:left;">
-<p> 3137 S New York Ave </br>
-    Milwaukee, WI 53207 </p> </div>
+<p><b> 3137 S New York Ave </br>
+    Milwaukee, WI 53207</b> </p> </div>
 	
 <div id="contactInfo" style="height:50px;width:200px;float:right;">
-<p style="text-align:right"> Phone: 414-530-4712 </br>
-    Email: rcbath84@gmail.com </p> </div>
+<p style="text-align:right"> <b>Phone: 414-530-4712 </br>
+    Email: rcbath84@gmail.com </b></p> </div>
 	
 <div id="horizontalRule" style="clear:both;">
 </br><hr> </div>
@@ -86,4 +85,9 @@ Waukesha County Technical College.    Well acquainted with Java,
 <td style="text-align:right"> 2010-present </td> </tr>
 <td> <i> Associates Degree in Applied Science </i> </td> 
 <td style="text-align:right"> Pewaukee, WI <td></tr>
-<tr> <td> 3.83 GPA </td></tr> </table></div>
+<tr> <td> 3.81 GPA </td></tr> </table></div>
+
+</div>
+
+</body>
+</html>
