--- a/web/resume.html
+++ b/web/resume.html
@@ -9,23 +9,23 @@ Resume for Robert C. Bath
 <div id="nameHeader" style="text-align:center;">
 <h1> Robert C. Bath </h1> </div>
 <hr>  
-<div id="address" style="height:50px;width:200px;float:left;">
+<div id="address" style="float:left;">
 <p><b> 3137 S New York Ave </br>
     Milwaukee, WI 53207</b> </p> </div>
 	
-<div id="contactInfo" style="height:50px;width:200px;float:right;">
+<div id="contactInfo" style="float:right;">
 <p style="text-align:right"> <b>Phone: 414-530-4712 </br>
     Email: rcbath84@gmail.com </b></p> </div>
 	
 <div id="horizontalRule" style="clear:both;">
-</br><hr> </div>
+<hr> </div>
 
 <div id="summary" style="clear:both;">
-<h3></br> Summary </h3> </div>
+<h3> Summary </h3> </div>
 <div id="summaryContent" style="width:600px;text-align:left;margin-left:125px;">
 
 <p align="left">Currently enrolled in Software/Web development program at 
-Waukesha County Technical College.    Well acquainted with Java,
+Waukesha County Technical College.  Well acquainted with Java,
  VB/.NET/ASP, Objective C (iOS), MySQL, MS SQL Server, and best 
  practices of various design patterns. A loyal employee with a rock 
  solid work ethic. </p> </div>
@@ -48,7 +48,7 @@ Waukesha County Technical College.    Well acquainted with Java,
 
 
 <div id="Employment">
-<h3> </br> Employment History </h3> </div>
+<h3>  Employment History </h3> </div>
 
 <div id="EmploymentContent" style="margin-left:120px;">
 <table width="725" border="0">
