--- a/web/resume.html
+++ b/web/resume.html
@@ -31,7 +31,7 @@ Waukesha County Technical College.  Well acquainted with Java,
  solid work ethic. </p> </div>
 
 <div id="competencies">
-<h3></br> Core Competencies </h3> </div>
+<h3> Core Competencies </h3> </div>
 
 <div id="competenciesContent" style="width:600px;text-align:left;margin-left:100px;">
 
